new view page and create, new actions in portfolio controller

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,11 +1,14 @@
 <h1>Portfolio Items<h1>
 
+	<%= link_to 'Create New', new_portfolio_path %> 
+
 	<% @portfolio_items.each do |portfolio_items| %>
 <p><%= portfolio_items.title %><p>
 	<p><%= portfolio_items.subtitle %><p>
 		<p><%= portfolio_items.body %><p>
-			<p><%= image_tag portfolio_items.main_image %><p>
-				<p><%= portfolio_items.thumb_image %><p>
+			<p><%= image_tag portfolio_items.main_image unless portfolio_items.main_image.nil? %><p>
+				
+				<p><%= image_tag portfolio_items.thumb_image unless portfolio_items.thumb_image.nil? %><p>
 
 
 	<% end %>
