edit view ~and edit,update actions in controlle practiced

--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,5 +1,5 @@
-<h1> new portfolio item<h1>
-
+<h1>Edit this portfolio Items<h1>
+	
 	<%= form_with(model: @portfolio_items) do |form| %>
 <br>
   <div class="field">
