--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Portfolio Items<h1>
 
-	<%= link_to 'Create New', new_portfolio_path %> 
+	<!--<%= link_to 'Create New', new_portfolio_path %> -->
+<%= link_to '<button type="button">Create new</button>'.html_safe, new_portfolio_path %>
 
 	<% @portfolio_items.each do |portfolio_items| %>
 <p><%= portfolio_items.title %><p>
