Portfolio index page now has link_to function active via button to edit or create new item

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,15 +1,29 @@
 <h1>Portfolio Items<h1>
 
-	<!--<%= link_to 'Create New', new_portfolio_path %> -->
+	<!--<%= link_to 'Create New', new_portfolio_path %> --> <!--creating link to new page -->
+
 <%= link_to '<button type="button">Create new</button>'.html_safe, new_portfolio_path %>
 
-	<% @portfolio_items.each do |portfolio_items| %>
-<p><%= portfolio_items.title %><p>
-	<p><%= portfolio_items.subtitle %><p>
-		<p><%= portfolio_items.body %><p>
-			<p><%= image_tag portfolio_items.main_image unless portfolio_items.main_image.nil? %><p>
-				
-				<p><%= image_tag portfolio_items.thumb_image unless portfolio_items.thumb_image.nil? %><p>
+<!-- <a href="Portfolios/new">Create new item</a> --> <!--creating href to new page -->
 
+
+<!-- to check what did the portfolio path and url looks like-->
+<!--
+<p><%=new_portfolio_path%></p>
+<br>
+<p><%=new_portfolio_url%></p>
+-->
+	<% @portfolio_items.each do |portfolio_items| %>
+	<p><%= portfolio_items.title %></p>
+	<p><%= portfolio_items.subtitle %></p>
+	<p><%= portfolio_items.body %></p>
+	<%= image_tag portfolio_items.main_image unless portfolio_items.main_image.nil? %>
+	<%= image_tag portfolio_items.thumb_image unless portfolio_items.thumb_image.nil? %>
+	
+	<!-- via text link -->
+	<!-- <%=link_to 'Edit', edit_portfolio_path(portfolio_items.id)%> -->	
+
+	<!-- via button -->
+	<%=link_to '<button type="button">Edit</button>'.html_safe, edit_portfolio_path(portfolio_items.id)%>
 
 	<% end %>
