--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Home Page</h1>
+<p>Here is the home page for Posts!</p>
+
+<h1>Blog posts</h1>
+<p>Below you can find the blog posts</p>
+
+<%= @myblogsData.inspect %>
+
+<h1>Skills posts</h1>
+<p>below you can find the Skill posts</p>
+
+<%= @myskillsData.inspect %>
+
+<h1>Portfolio posts</h1>
+<p>below you can find the Portfolio posts</p>
+
+<%= @myportfolioitems.inspect %>
